erDiagram
    USER ||--o{ POST : creates 
    POST ||--o{ COMMENTS : has

    USER {
        int user_id PK
        string username
        string password
        string email
        string instagram_id
    }
    POST {
        int post_id PK
        int user_id FK
        datetime post_time
        string post_type
        int like_count
        int comment_count
        int view_count
        datetime view_time
    }
    
    COMMENTS {
        int comment_id PK
        string post_id FK
        string comment_text
        int like_count
    }
